# trainc

./: AUTHORS  InputFormats.md  Makefile.am  Options.md  ProjectHome.md  README  TrainC.md  autogen.sh  configure.ac
scripts/: convert_rwthasr.py  convert_rwthasr_questions.sh  lookuptable.py
src/: Makefile.am  array.h  builder.cc  composed_transducer.cc  composed_transducer.h  composed_transducer_test.cc  config.h.in  context_builder.cc  context_builder.h  context_builder_test.cc  context_set.cc  context_set.h  context_set_test.cc  debug.h  epsilon_closure.cc  epsilon_closure.h  file.cc  file.h  file_test.cc  fst_interface.cc  fst_interface.h  gaussian_model.cc  gaussian_model.h  gaussian_model_test.cc  hash.h  hmm_compiler.cc  hmm_compiler.h  integer_set.h  integer_set_test.cc  lexicon_check.cc  lexicon_check.h  lexicon_compiler.cc  lexicon_compiler.h  lexicon_init.cc  lexicon_init.h  lexicon_split_predictor.cc  lexicon_split_predictor.h  lexicon_split_test.cc  lexicon_split_test.h  lexicon_state_splitter.cc  (+60 more)
